--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -1,7 +1,7 @@
-name: Update Trump Data (Date Parser)
+name: Update Trump Data (Raw Data Extraction)
 on:
   schedule:
-    - cron: '*/30 * * * *' # Körs var 30:e minut
+    - cron: '*/30 * * * *'
   workflow_dispatch:
 
 jobs:
@@ -18,9 +18,9 @@ jobs:
           python-version: '3.9'
 
       - name: Install Dependencies
-        run: pip install requests beautifulsoup4
+        run: pip install requests
 
-      - name: Scrape & Calculate Time
+      - name: Scrape Raw Data
         run: |
           cat <<EOF > analyzer.py
           import requests
@@ -28,9 +28,7 @@ jobs:
           import datetime
           import random
           import re
-          from bs4 import BeautifulSoup
 
-          # Adressen till databasen
           url = "https://rollcall.com/factbase/trump/topic/social/?platform=all&sort=date&sort_order=desc"
           
           post_count = 0
@@ -39,86 +37,80 @@ jobs:
           fetched_success = False
           source_label = "Roll Call (Aggregator)"
 
-          print(f"Hämtar data från: {url}")
+          print(f"Hämtar rådata från: {url}")
 
           try:
-              headers = {'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64)'}
+              headers = {
+                  'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36'
+              }
               response = requests.get(url, headers=headers, timeout=20)
               
               if response.status_code == 200:
-                  html = response.text
-                  soup = BeautifulSoup(html, 'html.parser')
-                  text_content = soup.get_text()
+                  raw_html = response.text
+                  
+                  # STRATEGI: Leta efter ISO-datum i koden (t.ex. "2026-02-11T06:16:00")
+                  # Eftersom sidan använder JavaScript ligger datumen ofta sparade så här.
+                  # Vi letar efter mönstret: ÅÅÅÅ-MM-DD följt av T och tid.
+                  
+                  print("Letar efter dolda tidsstämplar i koden...")
+                  
+                  # Regex för standard ISO-datum (Fångar '2026-02-11T14:30:00')
+                  iso_dates = re.findall(r'(202[0-9]-\d{2}-\d{2}T\d{2}:\d{2}:\d{2})', raw_html)
+                  
+                  print(f"Hittade {len(iso_dates)} stämplar i rådatan.")
                   
                   found_minutes = []
                   now_utc = datetime.datetime.utcnow()
                   
-                  # --- METOD 1: Leta efter datumformatet "February 11, 2026 @ 6:16 AM ET" ---
-                  # Regex för att hitta datumsträngen
-                  date_matches = re.findall(r'([A-Z][a-z]+ \d{1,2}, \d{4} @ \d{1,2}:\d{2} [AP]M ET)', text_content)
-                  
-                  print(f"Hittade {len(date_matches)} datum-stämplar.")
-                  
-                  for date_str in date_matches:
+                  for date_str in iso_dates:
                       try:
-                          # Rensa bort " ET" på slutet för att kunna parsa
-                          clean_date = date_str.replace(" ET", "")
-                          # Parsa strängen till ett datum-objekt
-                          # Format: Month Day, Year @ Hour:Minute AM/PM
-                          post_date = datetime.datetime.strptime(clean_date, "%B %d, %Y @ %I:%M %p")
+                          # Parsa datumet (ISO format)
+                          post_date = datetime.datetime.fromisoformat(date_str)
                           
-                          # Justera tidszon!
-                          # Datumet är i ET (Eastern Time). Servern är i UTC.
-                          # ET är ca 5 timmar efter UTC. Vi lägger på 5h för att få "UTC-tid" på inlägget.
-                          post_date_utc = post_date + datetime.timedelta(hours=5)
+                          # Ofta är dessa datum i UTC (Z) eller lokal tid. 
+                          # Om det diffar för mycket kan vi behöva justera, men vi antar UTC/Server-tid först.
+                          # Factba verkar köra UTC i sina json-objekt oftast.
                           
-                          # Räkna skillnad mot NU
-                          diff = now_utc - post_date_utc
+                          # Räkna skillnad
+                          diff = now_utc - post_date
                           diff_minutes = int(diff.total_seconds() / 60)
                           
-                          # Vi vill inte ha negativa minuter (om klockan går lite fel)
-                          if diff_minutes < 0: diff_minutes = 0
-                          
-                          found_minutes.append(diff_minutes)
-                          print(f"Datum: {clean_date} -> {diff_minutes} minuter sedan.")
-                      except Exception as e:
-                          print(f"Kunde inte tolka datum '{date_str}': {e}")
+                          # Filtrera bort orimliga tider (framtiden eller gamla år om regexet fick fnatt)
+                          if diff_minutes > -60 and diff_minutes < 525600: # Inom ett år bakåt
+                              # Om inlägget är i framtiden (tidszonsfel), sätt till 0 min
+                              if diff_minutes < 0: diff_minutes = 0
+                              
+                              found_minutes.append(diff_minutes)
+                              # print(f"Datum: {date_str} -> {diff_minutes} minuter sedan")
+                      except:
                           continue
 
-                  # --- METOD 2: Leta efter "minutes ago" (Backup) ---
-                  text_matches = re.findall(r'(\d+)\s*(m|min|mins|minutes?)\s+ago', text_content, re.IGNORECASE)
-                  for match in text_matches:
-                      found_minutes.append(int(match[0]))
-                  
-                  if re.search(r'(just now|seconds? ago)', text_content, re.IGNORECASE):
-                      found_minutes.append(0)
-
-                  # --- SAMMANSTÄLLNING ---
+                  # --- Resultat ---
                   if found_minutes:
-                      found_minutes.sort() # Sortera så lägst (nyast) kommer först
+                      found_minutes.sort() # Nyast först (minst antal minuter)
                       minutes_since_last = found_minutes[0]
                       
-                      # Räkna antalet inlägg under 60 minuter
+                      # Räkna inlägg senaste timmen (< 60 min)
                       post_count = sum(1 for m in found_minutes if m < 60)
                       
                       status = "live"
                       fetched_success = True
-                      print(f"SUCCESS: Senaste inlägg {minutes_since_last} min sedan. {post_count} st < 1h.")
+                      print(f"SUCCESS: Senaste inlägg {minutes_since_last} min sedan. {post_count} st senaste timmen.")
                   else:
-                      print("Inga tider hittades. Antagligen inga inlägg senaste dygnet.")
-                      # Vi sätter status till live men 0 inlägg
-                      status = "live"
-                      fetched_success = True
-                      post_count = 0
-                      minutes_since_last = 120 # Gammalt
+                      print("Inga ISO-datum hittades som matchade.")
+
+              else:
+                  print(f"Fel vid hämtning: {response.status_code}")
 
           except Exception as e:
-              print(f"Kritisk krasch: {e}")
+              print(f"Krasch vid analys: {e}")
 
-          # --- SIMULERING (Endast om sidan ligger nere) ---
+          # --- SIMULERING (Om vi inte hittar data) ---
           if not fetched_success:
               status = "estimated"
               source_label = "AI Prediction Model"
+              
+              # Samma simulering som alltid funkar
               roll = random.randint(0, 100)
               if roll < 65: 
                   post_count = 0
@@ -150,5 +142,5 @@ jobs:
           git config user.name "github-actions"
           git config user.email "action@github.com"
           git add data.json
-          git commit -m "Date Parser Update" || exit 0
+          git commit -m "Raw Data Fix" || exit 0
           git push
